syntax = "proto3";

package rlog.v1;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "junyoung.dev.rlogserver.proto";
option java_outer_classname = "RlogProto";

service AgentService {
  rpc Send(LogBatch) returns (SendAck);
}

message LogBatch {
  string agent_id = 1;
  string agent_name = 2;
  string batch_id = 3;
  google.protobuf.Timestamp sent_at = 4;

  repeated Log logs = 5;
}

message Log {
  string label = 1;
  string line = 2;
  google.protobuf.Timestamp ts = 3;
}

message SendAck {
  bool ok = 1;
  string message = 2;
  string batch_id = 3;
  uint32 accepted = 4;
}
